# personalsite

./: .gitignore  .npmrc  AIMenuChatbotInputCode.html  AboutPageInputCode.html  CLAUDE.md  ChatbotsDropdown.html  ContactPageInputCode.html  CreativeWritingInputCode.html  DuneSpiceWarsWikiInputCode.html  EcommercePriceTrackerScraperInputCode.html  Formspark.svelte  GEMINI.md  HomePageInputCode.html  LICENSE  PoEMarketAnalyzerInputCode.html  ShowcaseDisplayInputCode.html  TechStackShowcaseInputCode.html  ThisWebsiteShowcaseInputCode.html  WorkPageInputCode.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vercel.json  vite.config.ts
scripts/: generate-screenshots.js
src/: app.css  app.html
src/lib/: CodeSamples.svelte  Footer.svelte  Header.svelte  Hero.svelte  TechIcon.svelte  WasmDemo.svelte
src/lib/stores/: ui.svelte.ts
src/lib/wasm/: image-utils.ts
src/routes/: +page.svelte
src/routes/about/: +page.svelte
src/routes/contact/: +page.svelte
src/routes/work/: +page.svelte
src/routes/work/ai-menu-chatbot/: +page.svelte
src/routes/work/creative-writing-assistant/: +page.svelte
src/routes/work/dune-spice-wars-wiki/: +page.svelte
src/routes/work/ecommerce-price-tracker/: +page.svelte
src/routes/work/poe-market-analyzer/: +page.svelte
static/: _headers
static/wasm-modules/image-processor/: image_processor.d.ts  image_processor.js  image_processor_bg.wasm  image_processor_bg.wasm.d.ts  package.json
wasm-modules/image-processor/: Cargo.toml
wasm-modules/image-processor/src/: lib.rs
(+1 files in other folders)
