[package]
name = "image-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "ImageData",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
]

# Tell `rustc` to optimize for small code size.
[profile.release]
opt-level = "s"